--- a/CountDominance.tex
+++ b/CountDominance.tex
@@ -231,16 +231,25 @@
 	
 	\smallskip
 	
-	\begin{center}
-		\begin{tabular}[5]{r|llll}
-			& $IV_1$ & $IV_2$ & $IV_3$ & $IV_4$ \\
-			\toprule
-			$IV_1$ & 1.0 & 0.5 & 0.25 & 0.125 \\
-			$IV_2$ & 0.5 & 1.0 & 0.125 & 0.25 \\
-			$IV_3$ & 0.25 & 0.125 & 1.0 & 0.5 \\
-			$IV_4$ & 0.125 & 0.25 & 0.5 & 1.0
-		\end{tabular}
-	\end{center}
+	\begin{longtable}{l|rrrr}
+	\toprule
+	\multicolumn{1}{l}{} & IV1 & IV2 & IV3 & IV4 \\ 
+	\midrule
+	\multicolumn{5}{l}{Parameter} \\ 
+	\midrule
+	IV1 & 1.00000000 & 0.67082039 & 0.41833001 & 0.25000000 \\ 
+	IV2 & 0.67082039 & 1.80000000 & 0.28062430 & 0.67082039 \\ 
+	IV3 & 0.41833001 & 0.28062430 & 2.80000000 & 1.67332005 \\ 
+	IV4 & 0.25000000 & 0.67082039 & 1.67332005 & 4.00000000 \\ 
+	\midrule
+	\multicolumn{5}{l}{Sampled} \\ 
+	\midrule
+	IV1 & 0.13580061 & 0.08195510 & -0.16607185 & 0.09640778 \\ 
+	IV2 & 0.08195510 & 0.64261656 & -0.04569956 & -1.11854957 \\ 
+	IV3 & -0.16607185 & -0.04569956 & 2.05240296 & -1.27216522 \\ 
+	IV4 & 0.09640778 & -1.11854957 & -1.27216522 & 3.88941540 \\ 
+	\bottomrule
+	\end{longtable}
 	
 	\smallskip
 	
@@ -291,7 +300,7 @@
 	
 	%r2 - maybe take out the exp var R2 pieces - put them into the appendix - focus on interpreting results not by fit metrix
 	
-	\input{"./includes/ri_fits.tex"}
+	%\input{"./includes/ri_fits.tex"}
 	
 		\subsubsection{Linear Model}
 	
@@ -543,7 +552,7 @@ The goal of this section is to highlight similarities and differences between th
 This subsection discusses the parameter estimates obtained from the Normal, Poisson, and negative Binomial distributed DVs across all four data structures.  
 Note that descriptive statistics for the IVs and DVs are reported in Appendix X.  The results from the four models estimated on the Normal DVs are listed below in Table X.
 
-\input{"./includes/lm_mods.tex"}
+%\input{"./includes/lm_mods.tex"}
 
 The effects of data structure on estimation for Normally distributed variables with linear regression are well-known and the results in Table X are, as a result, consistent with extant research in showing that these data tended to recover the correct parameter estimates.
 
@@ -557,13 +566,13 @@ Recall that the true parameters were .2 for $X_1$, .15 for $X_2$, .125 for $X_3$
 Also recall that these linear regression equations underlie the generation of both the Poisson and negative Binomial DVs.  
 I expect then that the linear regression results will serve as a useful comparison point for the CRM parameter estimation results.
 
-\input{"./includes/pois_mods.tex"}
+%\input{"./includes/pois_mods.tex"}
 
 Numerically, the Poisson results look rather similar to the linear regression results as was intended.  
 Indeed, the linear regression prediction equation (with error) was used to generate the underlying Poisson distributed variable and both had the same underlying variance of 1.
 A further similarity between the linear and Poisson results is that the coefficients obtained across data structures were nearly identical with the exception of the intercept.
 
-\input{"./includes/nb_mods.tex"}
+%\input{"./includes/nb_mods.tex"}
 
 The negative Binomial regression results, by contrast to the Poisson, were numerically less similar to the linear regression and more noticeably sensitive to data conditions during model estimation.
 For instance, the negative Binomial results tended to produce larger coefficients when the variables were both correlated and had unequal variances.
